[package]
name = "graphics_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
softbuffer = "0.2.0"
winit = "0.28.3"
rand = "0.8.5"
nalgebra = "0.32.2"
# Note that nalgebra is dependent on matrixmultiply
# matrixmultiply = "0.3.4"
parking_lot = "0.12"