[package]
name = "graphics_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
softbuffer = "0.2.0"
winit = "0.28.3"
rand = "0.8.5"  # For RNG
nalgebra = "0.32.2"  # For linear algebra
parking_lot = "0.12"  # TODO - remove
rayon = "1.7.0"  # For multi-threading